--- a/tl/mabisang-pag-aaral-ng-ingles.html
+++ b/tl/mabisang-pag-aaral-ng-ingles.html
@@ -413,26 +413,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "Paano Matutong Mag-Ingles nang Epektibo: Ang Aking Paglalakbay at Payo",
-        "description": "Tuklasin ang napatunayang mga estratehiya para matutong mag-Ingles nang epektibo sa aming komprehensibong gabay na batay sa tunay na karanasan.",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
-        },
-        "keywords": "matutong mag-ingles nang epektibo, mga estratehiya sa pag-aaral ng ingles, english immersion, mga resources sa pag-aaral ng ingles"
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "Mabisang Pag-aaral ng Ingles: Ang Aking Paglalakbay at Payo",
+  "description": "Isang komprehensibong gabay sa mabisang pag-aaral ng Ingles batay sa tunay na karanasan. Sumasaklaw sa pagtatakda ng mga layunin, aktibong pakikilahok, immersion, mga personalized na estratehiya sa pagkatuto, pakikinig, pagsasalita, pagbabasa, pagsusulat, gramatika, pagbubuo ng bokabularyo, mga kasangkapang teknolohiya kabilang ang mga AI assistant, at ang kahalagahan ng pagiging matatag.",
+  "keywords": [
+    "mabisang pag-aaral ng ingles",
+    "mga estratehiya sa pag-aaral ng ingles",
+    "immersion sa ingles",
+    "personalized na pag-aaral ng ingles",
+    "pagsasanay sa pakikinig ng ingles",
+    "kahusayan sa pagsasalita ng ingles",
+    "pag-unawa sa pagbabasa ng ingles",
+    "pagsasanay sa pagsusulat ng ingles",
+    "mga tips sa gramatika ng ingles",
+    "pagbubuo ng bokabularyo sa ingles",
+    "teknolohiya sa pag-aaral ng wika",
+    "AI para sa pag-aaral ng wika",
+    "pagiging matatag sa pag-aaral ng ingles"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+  },
+  "url": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles",
+  "inLanguage": "tl",
+  "articleSection": "Pag-aaral ng Ingles",
+  "articleBody": "Matuto kung paano mabisang pag-aralan ang Ingles sa pamamagitan ng mga praktikal na payo na sumasaklaw sa pagtatakda ng mga layunin, aktibong pakikilahok, immersion, personalized na pagkatuto, pakikinig, pagsasalita, pagbabasa, pagsusulat, gramatika, bokabularyo, mga kasangkapang teknolohiya, at mga estratehiya sa pagiging matatag.",
+  "about": {
+    "@type": "Thing",
+    "name": "Pag-aaral ng Wikang Ingles"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "Edukasyon",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "Komunikasyon",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "Artificial Intelligence",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "Artificial Intelligence",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "12 Napatunayang Estratehiya para Maging Mahusay sa Wikang Ingles",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "Mga Nag-aaral ng Ingles"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+      },
+      "name": "Pagtatakda ng Malinaw na mga Layunin",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+      },
+      "name": "Aktibong Pakikilahok ang Susi",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+      },
+      "name": "Ilubog ang Sarili",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+      },
+      "name": "Personalized na Pag-aaral",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+      },
+      "name": "Sanayin ang Iyong Pandinig",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+      },
+      "name": "Magsalita Ka!",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+      },
+      "name": "Malawak na Pagbabasa",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+      },
+      "name": "Pagsasanay sa Pagsusulat",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+      },
+      "name": "Mahalaga ang Gramatika",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+      },
+      "name": "Ang Bokabularyo ay Kapangyarihan",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+      },
+      "name": "Ang Teknolohiya ay Kaibigan Mo",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+      },
+      "name": "Pagiging Matatag at Matiyaga",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "Lahat ng Antas",
+  "educationalUse": "Sariling Pag-aaral",
+  "interactivityType": "Naglalahad",
+  "learningResourceType": "Gabay",
+  "typicalAgeRange": "13-"
+}
     </script>
 </body>
 </html>
