--- a/ko/yeongeo-hwalryeokjeog-eolearn.html
+++ b/ko/yeongeo-hwalryeokjeog-eolearn.html
@@ -413,26 +413,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "효과적으로 영어 배우기: 나의 여정과 조언",
-        "description": "실제 경험을 바탕으로 한 종합적인 가이드로 영어를 효과적으로 배우는 검증된 전략을 발견하세요.",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
-        },
-        "keywords": "효과적으로 영어 배우기, 영어 학습 전략, 영어 몰입, 영어 학습 자료"
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "영어 효율적으로 배우기: 나의 여정과 조언",
+  "description": "실제 경험을 바탕으로 한 영어를 효율적으로 배우는 포괄적인 가이드. 목표 설정, 적극적인 참여, 몰입, 개인 맞춤형 학습 전략, 듣기, 말하기, 읽기, 쓰기, 문법, 어휘 구축, AI 어시스턴트를 포함한 기술 도구, 그리고 일관성의 중요성을 다룹니다.",
+  "keywords": [
+    "영어 효율적으로 배우기",
+    "영어 학습 전략",
+    "영어 몰입",
+    "개인 맞춤형 영어 학습",
+    "영어 듣기 연습",
+    "영어 말하기 유창성",
+    "영어 독해력",
+    "영어 작문 연습",
+    "영어 문법 팁",
+    "영어 어휘 구축",
+    "언어 학습 기술",
+    "언어 학습을 위한 AI",
+    "영어 학습 일관성"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+  },
+  "url": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn",
+  "inLanguage": "ko",
+  "articleSection": "영어 학습",
+  "articleBody": "목표 설정, 적극적인 참여, 몰입, 개인 맞춤형 학습, 듣기, 말하기, 읽기, 쓰기, 문법, 어휘, 기술 도구 및 일관성 전략을 포함하는 실용적인 조언으로 영어를 효과적으로 학습하는 방법을 알아보세요.",
+  "about": {
+    "@type": "Thing",
+    "name": "영어 학습"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "교육",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "커뮤니케이션",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "인공지능",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "인공지능",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "영어를 마스터하기 위한 12가지 검증된 전략",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "영어 학습자"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+      },
+      "name": "명확한 목표 설정하기",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+      },
+      "name": "적극적인 참여가 핵심이다",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+      },
+      "name": "언어에 몰입하기",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+      },
+      "name": "개인 맞춤형 학습",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+      },
+      "name": "귀 훈련하기",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+      },
+      "name": "적극적으로 말하기!",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+      },
+      "name": "폭넓게 읽기",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+      },
+      "name": "쓰기 연습",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+      },
+      "name": "문법은 중요하다",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+      },
+      "name": "어휘는 힘이다",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+      },
+      "name": "기술은 당신의 친구",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+      },
+      "name": "일관성과 끈기",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "모든 수준",
+  "educationalUse": "자기 학습",
+  "interactivityType": "설명적",
+  "learningResourceType": "가이드",
+  "typicalAgeRange": "13-"
+}
     </script>
 </body>
 </html>
