--- a/learn-english-effectively.html
+++ b/learn-english-effectively.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
     
     <!-- Meta Description - Keep between 150-160 characters -->
-    <meta name="description" content="How to learn English effectively: a comprehensive guide to English language learning. Improve your speaking, listening, reading, writing, grammar and vocabulary using proven methods and free resources.">
+    <meta name="description" content="How to learn English effectively: a comprehensive guide. Improve your speaking, reading, writing, grammar and vocabulary using proven methods and free resources">
     
     <!-- Meta Keywords - Still useful for some search engines -->
     <meta name="keywords" content="learn english effectively, english learning strategies, english immersion, english learning resources, english speaking practice, english vocabulary building, english grammar tips, effective English learning, how to learn English for free, English for beginners, how to improve English speaking fluency at home, best websites for English listening practice free, effective vocabulary building techniques for English learners, grammar rules every English learner should know, how to create an immersive English learning environment, personalized learning plan for English language, digital tools to learn English vocabulary and grammar, how to stay motivated learning English long term, practice English conversation with native speakers online free, best resources for English reading comprehension practice, free online English tests">
